--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.dummyjdbc</groupId>
 	<artifactId>dummyjdbc</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>DummyJDBC</name>
@@ -20,9 +19,9 @@
 	</licenses>
 
 	<scm>
-		<url>http://dummyjdbc.googlecode.com/svn/trunk/</url>
-		<connection>scm:svn:http://dummyjdbc.googlecode.com/svn/trunk/</connection>
-		<developerConnection>scm:svn:https://dummyjdbc.googlecode.com/svn/trunk/</developerConnection>
+		<url>http://dummyjdbc.googlecode.com/svn/tags/dummyjdbc-1.1.0</url>
+		<connection>scm:svn:http://dummyjdbc.googlecode.com/svn/tags/dummyjdbc-1.1.0</connection>
+		<developerConnection>scm:svn:https://dummyjdbc.googlecode.com/svn/tags/dummyjdbc-1.1.0</developerConnection>
 	</scm>
 
 	<developers>
