--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.dummyjdbc</groupId>
 	<artifactId>dummyjdbc</artifactId>
-	<version>1.1.2</version>
+	<version>1.1.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>DummyJDBC</name>
@@ -19,9 +19,9 @@
 	</licenses>
 
 	<scm>
-		<url>http://dummyjdbc.googlecode.com/svn/tags/dummyjdbc-1.1.2</url>
-		<connection>scm:svn:http://dummyjdbc.googlecode.com/svn/tags/dummyjdbc-1.1.2</connection>
-		<developerConnection>scm:svn:https://dummyjdbc.googlecode.com/svn/tags/dummyjdbc-1.1.2</developerConnection>
+		<url>http://dummyjdbc.googlecode.com/svn/trunk/</url>
+		<connection>scm:svn:http://dummyjdbc.googlecode.com/svn/trunk/</connection>
+		<developerConnection>scm:svn:https://dummyjdbc.googlecode.com/svn/trunk/</developerConnection>
 	</scm>
 
 	<developers>
