--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -125,6 +125,22 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.6.7</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
