--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.dummyjdbc</groupId>
 	<artifactId>dummyjdbc</artifactId>
-	<version>1.3.1</version>
+	<version>1.3.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>DummyJDBC</name>
@@ -22,7 +22,7 @@
 		<url>https://github.com/kaiwinter/dummyjdbc</url>
 		<connection>scm:git:https://github.com/kaiwinter/dummyjdbc.git</connection>
 		<developerConnection>scm:git:git@github.com:kaiwinter/dummyjdbc.git</developerConnection>
-	  <tag>dummyjdbc-1.3.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<developers>
